# online-changepoint-algorithms

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: generate_data.py  run_bocpd.py  run_cusum.py  run_expectation_maximization.py
rust/: Cargo.toml
rust/benches/: benchmark_bocpd.rs  benchmark_bocpd_model.rs  benchmark_cusum.rs  helpers.rs
rust/src/: bocpd.rs  cusum.rs  expect_max.rs  lib.rs
rust/src/bocpd/: beta_cache.rs  bocpd_model.rs  dist_params.rs  normal_inverse_gamma.rs  sparse_probs.rs
rust/src/expect_max/: em_model.rs  em_model_builder.rs  normal.rs  normal_params.rs  pos_int.rs  probability.rs
rust/tests/: bocpd_model_test.rs  bocpd_test.rs  cusum_test.rs  em_test.rs  helpers.rs
src/change_point_algorithms/: _change_point_algorithms.pyi
src/change_point_algorithms/online_detection/: bocpd.py  cusum.py  expect_Max.py
tests/: test_all.py  test_bocpd.py  test_cusum.py  test_em.py  test_imports.py
