[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "change_point_algorithms._change_point_algorithms"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project]
name = "online-changepoint-algorithms"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
readme = "README.md"
keywords = ["changepoint", "detection", "online detection"]

dependencies = [
    "numba", # speeding up some python functions
    "numpy"
]

[project.optional-dependencies]
progress = ["tqdm"]
test = [
    "pytest",
    "pytest-benchmark"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
