[package]
name = "change_point_algorithms"
version = "0.0.5"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_change_point_algorithms"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = "0.27.1"
statrs = "0.18.0"
itertools = "0.14.0"
ndarray = "0.17.1"
num-traits = "0.2.19"
rand = "0.9.0"
rand_distr = "0.5.1"

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.0"
rand_distr = "0.5.1"

[[bench]]
name = "benchmark_bocpd"
harness = false

[[bench]]
name = "benchmark_bocpd_model"
harness = false

[[bench]]
name = "benchmark_cusum"
harness = false
